<resources>
    <string name="app_name">혼자완?</string>
    <string name="menu_discount">할인 받안?</string>
    <string name="menu_location">여기 뭐이서?</string>
    <string name="menu_schedule">오늘 뭐하맨?</string>
    <string name="menu_sos">SOS 메세지</string>
    <string name="menu_mypage">내정보</string>
    <string name="menu_login">로그인</string>
    <string name="splash_logo">스플래시 로고</string>
    <string name="signup_underline"><u>회원가입</u></string>
    <string name="findAccount_underline"><u>아이디/비밀번호 찾기</u></string>
    <string name="sos">SOS 메시지 모드</string>
    <string name="contacts">저장된 연락처</string>
    <string name="setsfx">효과음 설정</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
