<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_discount"
        android:title="@string/menu_discount"
        android:icon="@drawable/ic_discount"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_location"
        android:title="@string/menu_location"
        android:icon="@drawable/ic_pointer"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_schedule"
        android:title="@string/menu_schedule"
        android:icon="@drawable/ic_checkbox"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_sos"
        android:title="@string/menu_sos"
        android:icon="@drawable/ic_contact"
        app:showAsAction="ifRoom"/>

</menu>